Changes from the meeting
- Removed myCASA
- Bob's flying school header when on RePL application
- Inline editing
- RePL traing type display
- Application summary
- Declaration

--- a/00-user-homepage.html
+++ b/00-user-homepage.html
@@ -59,9 +59,9 @@
 			<h3>My Organisation</h3>
 			<a href="01-organisation.html" class="au-direction-link">Bob's Flying School</a>
 
-			<p class="m-t-0">&nbsp;</p>
+			<!--<p class="m-t-0">&nbsp;</p>
 			<a class="au-cta-link" href="#">Licences</a>
-			<p class="m-t-0 form-text">View your licences</p>
+			<p class="m-t-0 form-text">View your licences</p>-->
 
 			<p class="m-t-0">&nbsp;</p>
 			<a class="au-cta-link" href="#">Profile details</a>
