--- a/01-organisation.html
+++ b/01-organisation.html
@@ -48,7 +48,7 @@
 				<nav class="au-breadcrumbs" aria-label="breadcrumb">
 			  <ul class="au-link-list au-link-list--inline sm-hidden">
 			    <li><a href="00-user-homepage.html">Home</a></li>
-					<li><a href="01-my-orgs.html">My Organisations</a></li>
+				
 			    <li>Bob's Flying School</li>
 			  </ul>
 				<!--<div class="lg-hidden"><a class="au-direction-link au-direction-link--left" href="00-user-homepage.html">Home</a></div>-->
@@ -87,12 +87,15 @@
 					<h3>Application</h3>
 					<a href="02-course-details.html" class="au-direction-link">Remote Pilot Licence (RePL)</a>
 					<p>&nbsp;</p>
+					<div class="activity">
+						<h3>Previous application</h3>
+						<strong>RePL Application</strong><br>
+						<a href="#" class=" ">Download RePL Application 28th Jul 18 (PDF | 32kB) </a>
+					</div>
+					<p>&nbsp;</p>
 					<a class="au-cta-link" href="#">My permissions</a>
 					<p class="m-t-0 form-text">View your permissions</p>
-					<div class="activity">
-						<h3>History</h3>
-						<a href="#" class="au-direction-link">20 Jul 18 - Submitted a Remote Pilot Licence (RePL) Application </a>
-					</div>
+
 			</div>
 
 	</div>
