--- a/02-course-details.html
+++ b/02-course-details.html
@@ -47,7 +47,7 @@
 				<nav class="au-breadcrumbs" aria-label="breadcrumb">
 			  <ul class="au-link-list au-link-list--inline">
 			    <li><a href="00-user-homepage.html">Home</a></li>
-					<li><a href="01-my-orgs.html">My Organisations</a></li>
+
 			    <li><a href="01-organisation.html">Bob's Flying School</a></li>
 					<li>Remote Pilot Licence (RePL)</li>
 			  </ul>
@@ -72,16 +72,12 @@
 </section>-->
 	<div class="container">
 		<div class="row">
-			<div class="col-md-6"><br>
+			<div class="col-lg-6 col-md-12"><br>
 					<h2 class="au-display-xl">Remote Pilot Licence (RePL)</h2>
 					<h3>Course Details</h3>
 					<a class="au-direction-link au-direction-link--left" href="javascript:history.back()">Back</a>
 					<p class="m-t-1">&nbsp;</p>
-					<div class="form-section">
-						<label for="text-input">Course Number</label>
-						<input class="au-text-input" name="text-input" id="text-input" type="text">
-					</div>
-					<p class="label">RePL Training</p>
+					<h3 class="label">RePL Training</h3>
 					 <div class="form-section">
 						 Theory and Operational
 						 <!--<label class="au-control-input">
@@ -102,6 +98,11 @@
 							 <span class="au-control-input__text">Only Operational</span>
 						 </label>-->
 						</div>
+					<div class="form-section">
+						<label for="text-input">Course Number</label>
+						<input class="au-text-input" name="text-input" id="text-input" type="text">
+					</div>
+
 						<p>&nbsp;</p>
 							<h3>Remotely Piloted Aircraft details</h3>
 							<div class="form-section">
