--- a/02-student.html
+++ b/02-student.html
@@ -47,8 +47,8 @@
 			 <div class="col-md-12">
 				<nav class="au-breadcrumbs" aria-label="breadcrumb">
 			  <ul class="au-link-list au-link-list--inline">
-			    <li><a href="00-user-homepage.html">myCASA</a></li>
-					<li><a href="01-my-orgs.html">My Organisations</a></li>
+			    <li><a href="00-user-homepage.html">Home</a></li>
+
 			    <li><a href="01-organisation.html">Bob's Flying School</a></li>
 					<li>Remote Pilot Licence (RePL)</li>
 			  </ul>
@@ -74,32 +74,77 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-md-12"><br>
+				<div role="alert" class="au-body au-page-alerts au-page-alerts--success" id="save">
+					<h3>Saved successfully</h3>
+				</div>
+				<div role="alert" class="au-body au-page-alerts au-page-alerts--error" id="error">
+					<h3>Student not found</h3>
+				</div>
 					<h2 class="au-display-xl">Remote Pilot Licence (RePL)</h2>
-					<h3>Pilot Details</h3>
+					<h3>Add Students</h3>
 					<a class="au-direction-link au-direction-link--left" href="javascript:history.back()">Back</a>
+
 					<!--<div class="form-section">
 						<label for="text-input">Course Number</label>
 						<input class="au-text-input" name="text-input" id="text-input" type="text">
 				  </div>-->
-					<div role="alert" class="au-body au-page-alerts au-page-alerts--success" id="save">
-					  <h3>Saved successfully</h3>
-					</div>
-					<p>
-						<button type="button" class="au-btn au-btn--secondary" data-toggle="modal" data-target="#addPilot">
-  					<span class="fas fa-user-plus"></span> Add Pilot
-					</button></p>
-					<div class="student-details">
-						<ul class="grid">
+					<!--<div role="alert" class="au-body au-page-alerts au-page-alerts--warning" id="warning">
+					  <h3>RePL Pilot's 100 points of ID not verified</h3>
+					  <p>.....</p>
+					</div>-->
+
+					<div class="row student-details">
+						<ul class="col-md-12 grid">
+							<li class="bg-dark">
+								<div class="student">
+									<strong>Name</strong>
+								</div>
+									<div class="edit">
+										<strong>ARN</strong>
+									</div>
+							</li>
 							<li class="hidden">
 								<div class="student">
 									<span class="student-name">Peter Smith</span>
-									<span class="student-arn">ARN 123 4568</span>
 								</div>
-
 								<div class="edit">
-									<a href="#" class="btn-edit" data-toggle="modal" data-target="#addPilot">
+									<span class="student-arn">123 4568</span>
+									<!--<a href="#" class="btn-edit">
 										<span class="fas fa-pencil-alt"></span> Edit
+									</a>-->
+								</div>
+								<div class="delete">
+									<a href="#" class="btn-delete"  data-toggle="modal" data-target="#deletePilot">
+									  <span class="fas fa-minus-circle"></span> Delete
 									</a>
+								</div>
+								<!--<div class="edit-student">
+									<div class="col-md-6 col-xs-12">
+										<label for="text-input">Family Name</label>
+										<input class="au-text-input" name="text-input" id="surname-input" type="text" value="Smith">
+									</div>
+									<div class="col-md-6 col-xs-12">
+										<label for="text-input">ARN</label>
+										<input class="au-text-input" name="text-input" id="arn-input" type="number"  value="123654">
+										<span id="arn-error" style="color:#d82c52;"></span>
+									</div>
+									<div class="col-md-6 col-xs-12">
+										<a href="#" class="btn-save-student"><span class="fas fa-save"></span> Save</a>
+									</div>
+									<div class="col-md-6 col-xs-12 pull-right">
+										<a href="#" class="btn-canel-student"> Cancel</a>
+									</div>
+								</div>-->
+							</li>
+							<li class="hidden">
+								<div class="student">
+									<span class="student-name">Ava Williams</span>
+								</div>
+								<div class="edit">
+									<span class="student-arn">223 4568</span>
+									<!--<a href="#" class="btn-edit">
+										<span class="fas fa-pencil-alt"></span> Edit
+									</a>-->
 								</div>
 								<div class="delete">
 									<a href="#" class="btn-delete"  data-toggle="modal" data-target="#deletePilot">
@@ -109,7 +154,7 @@
 							</li>
 							<li id="none">
 								<div class="student">
-									<span class="student-arn">No pilots added</span>
+									<span class="student-arn">No students added</span>
 								</div>
 							</li>
 							<!--<li>
@@ -131,14 +176,29 @@
 
 						</ul>
 					</div>
-
+					<section class="row arn-details">
+					<div class="form-section col-md-4 col-xs-12">
+						<label for="text-input">Family Name</label>
+						<input class="au-text-input" name="text-input" id="surname-input" type="text">
+				  </div>
+					<div class="form-section col-md-4 col-xs-12">
+						<label for="text-input">ARN</label>
+						<input class="au-text-input" name="text-input" id="arn-input" type="number">
+						<span id="arn-error" style="color:#d82c52;"></span>
+				  </div>
+					<div class="col-md-4 col-xs-12">
+						<button type="button" class="au-btn au-btn--secondary m-t-3" id="addPilot">
+						<!--<span class="fas fa-user-plus"></span>--> Add Student
+						</button>
+					</div>
+				</section>
 			</div>
 		</div>
 	</div>
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-6 col-md-12">
-				<a href="04-payment.html" class="au-btn">Proceed to payment</a>
+			<div class="col-lg-6 col-md-12"><br>
+				<a href="03-paymentsummary.html" class="au-btn">Next</a>
 				<div class="save-exit">
 				<a href="#" class="au-btn au-btn--secondary">
 				Save and exit
@@ -150,7 +210,7 @@
 
 
 	<!-- Modal add pilot -->
-	<div class="modal fade" id="addPilot" tabindex="-1" role="dialog" aria-labelledby="addPilotDetails" aria-hidden="true">
+	<!--<div class="modal fade" id="addPilot" tabindex="-1" role="dialog" aria-labelledby="addPilotDetails" aria-hidden="true">
 	  <div class="modal-dialog modal-dialog-centered" role="document">
 	    <div class="modal-content">
 	      <div class="modal-header">
@@ -198,7 +258,7 @@
 						<div class="form-section">
 							<label for="select1block">Weight class</label>
 							<select id="select1block" class="au-select au-select--block">
-								 <option value="1">Please select</option>
+								<option value="1">Please select</option>
 								<option value="2">2kg up to 25kg</option>
 								<option value="3">25kg up to 150kg</option>
 							</select>
@@ -251,7 +311,7 @@
 	      </div>
 	    </div>
 	  </div>
-	</div>
+	</div>-->
 	<!-- End add pilot -->
 
 	<!-- Delete -->
@@ -268,8 +328,8 @@
         Are you sure you want to delete Peter Smith?
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
-        <button type="button" class="btn btn-primary">Yes</button>
+        <button type="button" class="au-btn au-btn--secondary" data-dismiss="modal">No</button>
+        <button type="button" class="au-btn">Yes</button>
       </div>
     </div>
   </div>
@@ -289,32 +349,78 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
 
 <script>
-	$('#arn-check, #save').hide();
-	$( "#arn-input" ).focusout(function() {
+	$('#arn-check, #save, #warning, #error, .edit-student').hide();
+	var arn = document.getElementById("arn-input").value;
+	var surname = document.getElementById("surname-input").value;
+	timesClicked = 0;
+	$('#addPilot').click(function(){
+
+		timesClicked++;
+		$('#error').show();
+		if(timesClicked>1){
+			//alert(surname);
+			$('#error').hide();
+			$('#save').show();
+			$('.grid li:nth-child(2n)').removeClass('hidden');
+			$('#none').addClass('hidden');
+		}
+		/*else {
+			$('#error').show();
+		}*/
+		if(timesClicked>2){
+			//alert(surname);
+			$('#save').show();
+			$('.grid li:nth-child(3n)').removeClass('hidden');
+		}
+	/*	else {
+			$('#error').show();
+		}*/
+
+
+	});
+
+
+
+
+
+
+	$('.btn-edit').click(function(){
+		$('.edit-student').show();
+		//document.getElementByClassName('.btn-edit').textContent="Close";
+		$('.edit, .delete, #save, .student').hide();
+	});
+	$('.btn-canel-student, .btn-save-student').click(function(){
+		$('.edit-student').hide();
+		//document.getElementByClassName('.btn-edit').textContent="Close";
+		$('.edit, .delete, .student').show();
+	});
+	$('.btn-save-student').click(function(){ $('#save, .student').show();});
+	/*$( "#arn-input" ).focusout(function() {
     $( "#arn-input" ).css( "border","4px solid #d82c52" );
 		document.getElementById("arn-error").textContent="The ARN does not match the Pilots details";
-  });
-	var type = window.location.hash.substr(1);
+  });*/
+	//var type = window.location.hash.substr(1);
 	//alert (type);
-	$('#save-button').click(function(){
+/*	$('#save-button').click(function(){
 		//location.reload();
 		$('#save').show();
 		$('.grid li').removeClass('hidden');
 		$('#none').addClass('hidden');
-	});
-	//if (type=='save'){
+	});*/
 
+
+	//if (type=='save'){
 		//$(window).scrollTop(0);
 	//	$("html, body").animate({ scrollTop: 0 }, "slow");
 	//}
 	/* Name on other lines */
-	$('#details').hide();
+	/*$('#details').hide();
 	$('#alt-remote').change(function(){
 	        if(this.checked)
 	            $('#details').fadeIn('slow');
 	        else
 	            $('#details').fadeOut('slow');
-	 });
+	 });*/
 </script>
 </body>
 </html>
