--- a/04-declaration.html
+++ b/04-declaration.html
@@ -20,7 +20,7 @@
 	        <a class="au-header__brand" href="00-user-homepage.html">
 	          <img class="au-header__brand-image" alt="my CASA" src="img/CASALOGO-white-i.svg">
 	          <!--<div class="au-header__text">
-	            <h1 class="au-header__heading">myCASA</h1>
+	            <h1 class="au-header__heading">Home</h1>
 	            <div class="au-header__subline">
 	              Service description that could be a little longer
 	            </div>
@@ -74,75 +74,26 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-md-12"><br>
+				<div role="alert" class="au-body au-page-alerts au-page-alerts--error" id="error">
+					<p>Declaration not completed</p>
+				</div>
 					<h2 class="au-display-xl">Remote Pilot Licence (RePL)</h2>
 					<a class="au-direction-link au-direction-link--left" href="javascript:history.back()">Back</a>
-					<h3>Application Summary</h3>
-						<br>
-						<strong>RePL Training:</strong>Theory and Operational<br>
-						<strong>Category:</strong> Multi Rotor<br>
-						<strong>Weight class: </strong>2kg up to 25kg
-						<br><br>
-						<strong>Remote Pilot Licence x2</strong><br>
-						<strong>Payment Total: $80.00</strong>
-
-						<div class="student-details">
-							<div class="student-details">
-								<ul class="grid">
-									<li>
-										<div class="student">
-											<strong>Name</strong>
-										</div>
-											<div class="edit">
-												<strong>ARN</strong>
-											</div>
-									</li>
-									<li>
-										<div class="student">
-											<span class="student-name">Peter Smith</span>
-										</div>
-										<div class="edit">
-											<span class="student-arn">123 4568</span>
-											<!--<a href="#" class="btn-edit">
-												<span class="fas fa-pencil-alt"></span> Edit
-											</a>-->
-										</div>
-										<div class="delete">
-											<a href="#" class="btn-delete"  data-toggle="modal" data-target="#deletePilot">
-											  <span class="fas fa-minus-circle"></span> Delete
-											</a>
-										</div>
-
-									</li>
-									<li>
-										<div class="student">
-											<span class="student-name">AVA Williams</span>
-										</div>
-										<div class="edit">
-											<span class="student-arn">223 4568</span>
-											<!--<a href="#" class="btn-edit">
-												<span class="fas fa-pencil-alt"></span> Edit
-											</a>-->
-										</div>
-										<div class="delete">
-											<a href="#" class="btn-delete"  data-toggle="modal" data-target="#deletePilot">
-											  <span class="fas fa-minus-circle"></span> Delete
-											</a>
-										</div>
-
-									</li>
-
-								</ul>
-						</div>
-
-					<!--<p><a href="01-organisation.html" class="au-direction-link">Go to Bob's Flying School</a></p>-->
+<br>
+			<h3>Declarations</h3>
+			<p class="au-callout" aria-label="Callout description1">
+				<label class="au-control-input">
+					<input class="au-control-input__input" type="checkbox" name="checkbox-ex" id="declaration">
+					<span class="au-control-input__text form-text p-t-0">I hereby declare that the particulars set out in this application are true in every respect and I understand there are penalties for providing false and misleading information and may result in prosecution, fines and cancellation of civil aviation authorisations.</span>
+				</label>
+			</p>
 		</div>
 	</div>
-
 </div>
 <div class="container">
 	<div class="row">
 		<div class="col-md-6"><br>
-			<a href="04-declaration.html" class="au-btn">Next</a>
+			<a href="04-payment.html" class="au-btn" id="summary">Proceed to Payment</a>
 			<div class="save-exit">
 			<a href="#" class="au-btn au-btn--secondary">
 			Save and exit
@@ -182,6 +133,16 @@
 <script type="text/javascript" src="js/furnace.min.js"></script>
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
-
+<script>
+	$('#error').hide();
+	var checkBox = document.getElementById("declaration");
+	$('#summary').click(function(){
+		if (checkBox.checked == false){
+    	$('#error').show();
+  	}
+		else {return true;}
+		return false;
+	});
+</script>
 </body>
 </html>
