--- a/05-receipt.html
+++ b/05-receipt.html
@@ -47,7 +47,7 @@
 				<nav class="au-breadcrumbs" aria-label="breadcrumb">
 			  <ul class="au-link-list au-link-list--inline">
 			    <li><a href="00-user-homepage.html">Home</a></li>
-					<li><a href="01-my-orgs.html">My Organisations</a></li>
+
 			    <li><a href="01-organisation.html#org-repl">Bob's Flying School</a></li>
 					<li>Remote Pilot Licence (RePL)</li>
 			  </ul>
@@ -73,27 +73,27 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6"><br>
-					<h2 class="au-display-xl">Remote Pilot Licence (RePL)</h2>
 
 					<div role="alert" class="au-body au-page-alerts au-page-alerts--success">
   				<h3>Successful</h3>
 					<ul>
 						<li>Payment Succeessful</li>
 						<li>RePL Application has been submitted successfully</li>
-						<li>Pilots on the application notified by email and on their account</li>
+						<li>Students on the application have been notified by email</li>
 					<ul>
 				  </div>
+					<h2 class="au-display-xl">Remote Pilot Licence (RePL)</h2>
 					<p>A copy of your invoice and RePL application details has been sent to your email address bob@bobsflyingschool.com.au</p>
-					<p>Pilots on the RePL application have been notified by email and on their account. Pilots will receive a copy in the mail within 5 business days. </p>
+					<p>Students on the RePL application have been notified by email. They will receive thier licence in the mail within 5 business days. </p>
 					<p>
-					<strong>Invoice</strong><br>
+					<!--<strong>Invoice</strong><br>
 						Remote Pilot Licence x 2<br>
 						Bob Furzer<br>
 						Card: XXXX - XXXX - XXXX - 2456<br>
 						Bill to: bob@bobsflyingschool.com.au<br><br>
 
 						<strong>Total: $80.00</strong>
-					</p>
+					</p>-->
 					<p><a href="01-organisation.html#org-repl" class="au-direction-link">Go to Bob's Flying School</a></p>
 
 
