Changes to design add student

--- a/02-course-details.html
+++ b/02-course-details.html
@@ -98,12 +98,12 @@
 							 <span class="au-control-input__text">Only Operational</span>
 						 </label>-->
 						</div>
-					<div class="form-section">
+					<!--<div class="form-section">
 						<label for="text-input">Course Number</label>
 						<input class="au-text-input" name="text-input" id="text-input" type="text">
-					</div>
+					</div>-->
 
-						<p>&nbsp;</p>
+						
 							<h3>Remotely Piloted Aircraft details</h3>
 							<div class="form-section">
 								<label for="select1block">Category</label>
