--- a/01-organisation.html
+++ b/01-organisation.html
@@ -48,7 +48,7 @@
 				<nav class="au-breadcrumbs" aria-label="breadcrumb">
 			  <ul class="au-link-list au-link-list--inline sm-hidden">
 			    <li><a href="00-user-homepage.html">Home</a></li>
-				
+
 			    <li>Bob's Flying School</li>
 			  </ul>
 				<!--<div class="lg-hidden"><a class="au-direction-link au-direction-link--left" href="00-user-homepage.html">Home</a></div>-->
@@ -92,9 +92,9 @@
 						<strong>RePL Application</strong><br>
 						<a href="#" class=" ">Download RePL Application 28th Jul 18 (PDF | 32kB) </a>
 					</div>
-					<p>&nbsp;</p>
+					<!--<p>&nbsp;</p>
 					<a class="au-cta-link" href="#">My permissions</a>
-					<p class="m-t-0 form-text">View your permissions</p>
+					<p class="m-t-0 form-text">View your permissions</p>-->
 
 			</div>
 
@@ -112,7 +112,7 @@
 	var type = window.location.hash.substr(1);
 	//alert (type);
 	if (type=='org-repl'){
-		$('.activity, #msg-repl').show();
+		$('.activity').show();
 		$('html').offset({top:0});
 	}
 </script>
