--- a/03-paymentsummary.html
+++ b/03-paymentsummary.html
@@ -74,6 +74,9 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-md-12"><br>
+				<div role="alert" class="au-body au-page-alerts au-page-alerts--error" id="error">
+					<p>Declaration not completed</p>
+				</div>
 					<h2 class="au-display-xl">Remote Pilot Licence (RePL)</h2>
 					<a class="au-direction-link au-direction-link--left" href="javascript:history.back()">Back</a>
 					<h3>Application Summary</h3>
@@ -136,13 +139,20 @@
 
 					<!--<p><a href="01-organisation.html" class="au-direction-link">Go to Bob's Flying School</a></p>-->
 		</div>
+		<h3>Declarations</h3>
+		<p class="au-callout" aria-label="Callout description1">
+			<label class="au-control-input">
+				<input class="au-control-input__input" type="checkbox" name="checkbox-ex" id="declaration">
+				<span class="au-control-input__text form-text p-t-0">I hereby declare that the particulars set out in this application are true in every respect and I understand there are penalties for providing false and misleading information and may result in prosecution, fines and cancellation of civil aviation authorisations.</span>
+			</label>
+		</p>
 	</div>
-
+</div>
 </div>
 <div class="container">
 	<div class="row">
 		<div class="col-md-6"><br>
-			<a href="04-declaration.html" class="au-btn">Next</a>
+			<a href="04-payment.html" class="au-btn" id="summary">Proceed to Payment</a>
 			<div class="save-exit">
 			<a href="#" class="au-btn au-btn--secondary">
 			Save and exit
@@ -182,6 +192,17 @@
 <script type="text/javascript" src="js/furnace.min.js"></script>
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
-
+<script>
+	$('#error').hide();
+	var checkBox = document.getElementById("declaration");
+	$('#summary').click(function(){
+		if (checkBox.checked == false){
+    	$('#error').show();
+			$('#declaration').parent().parent().addClass('form-error');
+			return false;
+  	}
+		else {return true;}
+	});
+</script>
 </body>
 </html>
