error message position and spacing

--- a/02-course-details.html
+++ b/02-course-details.html
@@ -103,7 +103,7 @@
 						<input class="au-text-input" name="text-input" id="text-input" type="text">
 					</div>-->
 
-						
+						<p class="m-t-0">&nbsp;</p>
 							<h3>Remotely Piloted Aircraft details</h3>
 							<div class="form-section">
 								<label for="select1block">Category</label>
