--- a/04-declaration.html
+++ b/04-declaration.html
@@ -89,7 +89,7 @@
 		<div class="col-md-6"><br>
 			<a href="04-payment.html" class="au-btn" id="summary">Proceed to Payment</a>
 			<div class="save-exit">
-			<a href="#" class="au-btn au-btn--secondary">
+			<a href="01-organisation.html#id-progress" class="au-btn au-btn--secondary">
 			Save and exit
 			</a>&nbsp; to continue this application later
 		 </div>
