--- a/04-payment.html
+++ b/04-payment.html
@@ -47,7 +47,7 @@
 				<nav class="au-breadcrumbs" aria-label="breadcrumb">
 			  <ul class="au-link-list au-link-list--inline">
 			    <li><a href="00-user-homepage.html">Home</a></li>
-				
+
 			    <li><a href="01-organisation.html#repl">Bob's Flying School</a></li>
 					<li>Remote Pilot Licence (RePL)</li>
 			  </ul>
@@ -132,7 +132,7 @@
 			<div class="col-md-6"><br>
 				<a class="au-btn" href="05-receipt.html">Submit Payment</a>
 				<div class="save-exit">
-				<a href="#" class="au-btn au-btn--secondary">
+				<a href="01-organisation.html#id-progress" class="au-btn au-btn--secondary">
 				Save and exit
 				</a>&nbsp; to continue this application later
 			 </div>
