--- a/02-course-details.html
+++ b/02-course-details.html
@@ -142,7 +142,7 @@
 			<div class="col-md-6">
 				<a href="02-student.html" class="au-btn">Next</a>
 				<div class="save-exit">
-				<a href="#" class="au-btn au-btn--secondary">
+				<a href="01-organisation.html#id-progress" class="au-btn au-btn--secondary">
 				Save and exit
 				</a>&nbsp; to continue this application later
 			 </div>
