--- a/02-student.html
+++ b/02-student.html
@@ -204,7 +204,7 @@
 
 				<a href="03-paymentsummary.html" class="au-btn">Finalise application</a>
 				<div class="save-exit">
-				<a href="#" class="au-btn au-btn--secondary">
+				<a href="01-organisation.html#id-progress" class="au-btn au-btn--secondary">
 				Save and exit
 				</a>&nbsp; to continue this application later
 			 </div>
@@ -385,7 +385,9 @@
 
 	});
 	/*$('#delete-yes').click(function(){
-		$('.grid li:nth-child(2n)').addClass('hidden');
+		if(){
+			$('.grid li:nth-child(2n)').addClass('hidden');
+		}
 	});*/
 
 
