added href link

--- a/01-organisation.html
+++ b/01-organisation.html
@@ -86,7 +86,7 @@
 			<div class="col-lg-6 col-md-12">
 				<div class="in-progress">
 					<h3>Application in progress</h3>
-					<a href="#" class=" ">02 Aug 15 - Remote Pilot Licence (RePL)</a>
+					<a href="02-course-details.html" class=" ">02 Aug 15 - Remote Pilot Licence (RePL)</a>
 					<br>
 					<span class="form-text">Multi Rotor 25kg to 150kg</span>
 				</div>
