cancel payment and deleted saved application

--- a/04-payment.html
+++ b/04-payment.html
@@ -18,12 +18,6 @@
 	      <div class="col-md-9 col-xs-7">
 	        <a class="au-header__brand" href="00-user-homepage.html">
 	          <img class="au-header__brand-image" alt="my CASA" src="img/CASALOGO-white-i.svg">
-	          <!--<div class="au-header__text">
-	            <h1 class="au-header__heading">myCASA</h1>
-	            <div class="au-header__subline">
-	              Service description that could be a little longer
-	            </div>
-	          </div>-->
 	        </a>
 	      </div>
 	      <div class="col-md-3 col-xs-5"><a class="au-btn au-btn--dark" href="signed-out.html">Sign out</a></div>
@@ -130,7 +124,8 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6"><br>
-				<a class="au-btn" href="05-receipt.html">Submit Payment</a>
+				<a class="au-btn" href="05-receipt.html">Submit Payment</a>&nbsp;&nbsp;
+				<a class="" href="01-organisation.html#id-progress">Cancel Payment</a>
 				<div class="save-exit">
 				<a href="01-organisation.html#id-progress" class="au-btn au-btn--secondary">
 				Save and exit
