--- a/01-organisation.html
+++ b/01-organisation.html
@@ -84,14 +84,14 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-md-12">
-
 				<div class="in-progress">
 					<h3>Application in progress</h3>
 					<a href="02-course-details.html" class=" ">02 Aug 15 - Remote Pilot Licence (RePL)</a>
 					<br>
 					<span class="form-text">Multi Rotor 25kg to 150kg</span>
+					<a href="#" class="btn-delete padding-0" data-toggle="modal" data-target="#delete-modal-app"><span class="fas fa-minus-circle"></span> Delete RePL application</a>
 				</div>
-				
+
 				<h3>Application</h3>
 				<a href="02-course-details.html" class="au-direction-link">Remote Pilot Licence (RePL)</a>
 				<p>&nbsp;</p>
@@ -108,14 +108,37 @@
 			</div>
 
 	</div>
+	<!-- Delete -->
+	<div class="modal fade" id="delete-modal-app" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+	<div class="modal-dialog modal-dialog-centered" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="exampleModalLongTitle">Delete Application</h5>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body">
+				Are you sure you want to delete the RePL application?
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="au-btn au-btn--secondary" data-dismiss="modal">No</button>
+				<button type="button" class="au-btn" data-dismiss="modal" id="delete-yes-app">Yes</button>
+			</div>
+		</div>
+	</div>
+	</div>
 </main>
 <footer class="footer">
 		<div class="footer-wrapper">
 			<iframe src="footer.html" frameborder="0" border="0" scrolling="no"></iframe>
 		</div>
 </footer>
+
 <script type="text/javascript" src="js/furnace.min.js"></script>
 <script type="text/javascript" src="js/jquery.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+
 <script>
 	$('.activity, #msg-repl, .in-progress').hide();
 	var type = window.location.hash.substr(1);
@@ -129,6 +152,9 @@
 		//$('html').offset({top:0});
 	}
 
+	$('#delete-yes-app').click(function(){
+			$('.in-progress').hide();
+	});
 </script>
 </body>
 </html>
