typo and previous app layout

--- a/01-organisation.html
+++ b/01-organisation.html
@@ -86,16 +86,20 @@
 			<div class="col-lg-6 col-md-12">
 				<div class="in-progress">
 					<h3>Application in progress</h3>
-					<a href="02-course-details.html" class=" ">02 Aug 15 - Remote Pilot Licence (RePL)</a>
-					<br>
-					<span class="form-text">Multi Rotor 25kg to 150kg</span>
-					<a href="#" class="btn-delete padding-0" data-toggle="modal" data-target="#delete-modal-app"><span class="fas fa-minus-circle"></span> Delete RePL application</a>
+					<div class="row">
+						<div class="col-md-8"><a href="02-course-details.html" class=" ">02 Aug 15 - Remote Pilot Licence (RePL)</a>
+						<br>
+						<span class="form-text">Multi Rotor 25kg to 150kg</span>
+						</div>
+						<div class="col-md-4">
+							<a href="#" class="btn-delete padding-0" data-toggle="modal" data-target="#delete-modal-app"><span class="fas fa-minus-circle"></span> Delete <span class="sr-only">RePL application</span></a>
+						</div>
+					</div>
 				</div>
 
 				<h3>Application</h3>
 				<a href="02-course-details.html" class="au-direction-link">Remote Pilot Licence (RePL)</a>
 				<p>&nbsp;</p>
-
 					<div class="activity">
 						<h3>Previous application</h3>
 						<strong>RePL Application</strong><br>
