--- a/05-receipt.html
+++ b/05-receipt.html
@@ -84,7 +84,7 @@
 				  </div>
 					<h2 class="au-display-xl">Remote Pilot Licence (RePL)</h2>
 					<p>A copy of your invoice and RePL application details has been sent to your email address bob@bobsflyingschool.com.au</p>
-					<p>Students on the RePL application have been notified by email. They will receive thier licence in the mail within 5 business days. </p>
+					<p>Students on the RePL application have been notified by email. They will receive their licence in the mail within 5 business days. </p>
 					<p>
 					<!--<strong>Invoice</strong><br>
 						Remote Pilot Licence x 2<br>
