--- a/submitted-applications.html
+++ b/submitted-applications.html
@@ -48,94 +48,111 @@
 				<nav class="au-breadcrumbs" aria-label="breadcrumb">
 			  <ul class="au-link-list au-link-list--inline sm-hidden">
 			    <li><a href="00-user-homepage.html">Home</a></li>
-
-			    <li>Bob's Flying School</li>
+			    <li><a href="01-organisation.html">Bob's Flying School</a></li>
+					<li>Submitted applications</li>
 			  </ul>
-				<!--<div class="lg-hidden"><a class="au-direction-link au-direction-link--left" href="00-user-homepage.html">Home</a></div>-->
 			</nav>
 		</div>
 	</div>
 	</div>
 <main id="main-content">
-	<section class="organisation">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-		<div class="org-logo">
-		</div>
-		<div class="org-title">
-			<h1 class="au-display-xl">Bob's Flying School</h1>
-			<h2 class="au-display-sm m-t-1">ARN: 321 4567</h2> <a class="au-direction-link au-direction-link--left m-t-1" href="00-user-homepage.html">Back to my account</a>
-		</div>
-	</div>
-	</div>
-	</div>
-	</section>
-	<div class="container" id="msg-repl">
-		<div class="row">
-			<div class="col-md-6">
-	<div role="alert" class="au-body au-page-alerts au-page-alerts--success" >
-	<h3>Successful</h3>
-	<p>Remote Pilot Licence (RePL) application submitted successfully.</p>
-</div><p>&nbsp;</p>
-</div>
-</div>
-</div>
+<br>
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-8 col-md-12">
-				<div class="">
-					<h3>Applications in progress</h3>
-					<ul class="list-unstyled m-t-1">
-						<li class="row in-progress">
-							<div class="col-md-8 col-xs-8"><a href="02-course-details.html" class=" ">02 Aug 18 - Remote Pilot Licence (RePL)</a>
+
+					<h2>Submitted applications</h2>
+					<a class="au-direction-link au-direction-link--left" href="javascript:history.back()">Back</a>
+
+					<h3 class="au-display-md">Showing 50 of 100 applications</h3><br>
+					<form role="search" class="au-search row" method="get" action="">
+						<label class="sr-only" for="s1">Search</label>
+						<div class="col-lg-8 col-xs-8">
+						<input type="search" class="au-text-input " name="s" id="s1">
+					</div>
+						<div class="col-lg-4 col-xs-4">
+							<button class="au-btn au-stretch_row">Search</button>
+						</div>
+					</form><p>&nbsp;</p>
+					<ul class="list-unstyled">
+						<li class="row">
+							<div class="col-md-8"><a href="#" class=" ">09 Aug 18 Download RePL Application (PDF | 32kB) </a>
 							<br>
 							<span class="form-text">Multi Rotor 2kg to 25kg</span>
 							</div>
-							<div class="col-md-4 col-xs-4">
-								<a href="#" class="btn-delete padding-0" data-toggle="modal" data-target="#delete-modal-app"><span class="fas fa-minus-circle"></span> Delete <span class="sr-only">RePL application</span></a>
-							</div>
 						</li>
 						<li class="row alt-row">
-							<div class="col-md-8 col-xs-8"><a href="#" class=" ">02 Aug 18 Remote Pilot Licence (RePL)</a>
+							<div class="col-md-8"><a href="#" class=" ">02 Aug 18 Download RePL Application (PDF | 32kB) </a>
 								<br>
 								<span class="form-text">Multi Rotor 25kg to 150kg</span>
 							</div>
-							<div class="col-md-4 col-xs-4">
-								<a href="#" class="btn-delete padding-0" data-toggle="modal" data-target="#delete-modal-app"><span class="fas fa-minus-circle"></span> Delete <span class="sr-only">RePL application</span></a>
-							</div>
 						</li>
 						<li class="row">
-							<div class="col-md-8 col-xs-8"><a href="#" class=" ">28th Jul 18 RePL Remote Pilot Licence (RePL)</a>
+							<div class="col-md-8"><a href="#" class=" ">28th Jul 18 Download RePL Application (PDF | 32kB) </a>
 							<br>
 							<span class="form-text">Multi Rotor 25kg to 150kg</span>
 							</div>
-							<div class="col-md-4 col-xs-4">
-								<a href="#" class="btn-delete padding-0" data-toggle="modal" data-target="#delete-modal-app"><span class="fas fa-minus-circle"></span> Delete <span class="sr-only">RePL application</span></a>
+						</li>
+						<li class="row alt-row">
+							<div class="col-md-8"><a href="#" class=" ">20th Jul 18 Download RePL Application (PDF | 32kB) </a>
+							<br>
+							<span class="form-text">Multi Rotor 25kg to 150kg</span>
+							</div>
+						</li>
+						<li class="row">
+							<div class="col-md-8"><a href="#" class=" ">15th Jul 18 Download RePL Application (PDF | 32kB) </a>
+							<br>
+							<span class="form-text">Multi Rotor 25kg to 150kg</span>
+							</div>
+						</li>
+						<li class="row alt-row">
+							<div class="col-md-8"><a href="#" class=" ">10th Jul 18 Download RePL Application (PDF | 32kB) </a>
+							<br>
+							<span class="form-text">Multi Rotor 25kg to 150kg</span>
+							</div>
+						</li>
+						<li class="row">
+							<div class="col-md-8"><a href="#" class=" ">9th Jul 18 Download RePL Application (PDF | 32kB) </a>
+							<br>
+							<span class="form-text">Multi Rotor 25kg to 150kg</span>
+							</div>
+						</li>
+						<li class="row alt-row">
+							<div class="col-md-8"><a href="#" class=" ">1th Jul 18 Download RePL Application (PDF | 32kB) </a>
+							<br>
+							<span class="form-text">Multi Rotor 25kg to 150kg</span>
+							</div>
+						</li>
+						<li class="row">
+							<div class="col-md-8"><a href="#" class=" ">30th Jun 18 Download RePL Application (PDF | 32kB) </a>
+							<br>
+							<span class="form-text">Multi Rotor 25kg to 150kg</span>
+							</div>
+						</li>
+						<li class="row alt-row">
+							<div class="col-md-8"><a href="#" class=" ">15th Jun 18 Download RePL Application (PDF | 32kB) </a>
+							<br>
+							<span class="form-text">Multi Rotor 25kg to 150kg</span>
 							</div>
 						</li>
 					</ul>
-				</div>
-				<div class="activity">
-					<h3>Recently submitted application</h3>
-					<strong>RePL Application</strong><br>
-					<a href="#" class=" ">02 Aug 18 Download RePL Application (PDF | 32kB) </a>
 					<p>&nbsp;</p>
-				</div>
-				<h3>Application</h3>
-				<div id="link-deactive">
-					Remote Pilot Licence (RePL)
-					<p class="au-callout">
-						Please complete your RePL applications before starting a new one. Your are only allowed to have 3 applications in progress.
-					</p>
-
-				</div>
-				<a href="02-course-details.html" class="au-direction-link" id="link-active">Remote Pilot Licence (RePL)</a>	<p>&nbsp;</p>
-					<a class="au-cta-link" href="submitted-applications.html">Submitted applications</a>
-					<p class="m-t-0 form-text">View all submitted applications</p>
 			</div>
-
+</div>
+			<div class="row">
+			<div class="col-lg-8 col-md-12 padding-0">
+			<nav aria-label="Page navigation submitted applications">
+			  <ul class="pagination">
+			    <!--<li class="page-item"><a class="page-link" href="#">Previous <span class="sr-only"> page 1</span></a></li>-->
+			    <li class="page-item active"><a class="page-link" href="#"><span class="sr-only">Current page </span>1</a></li>
+			    <li class="page-item"><a class="page-link" href="#"><span class="sr-only">Next page </span> 2</a></li>
+			    <li class="page-item"><a class="page-link" href="#">Next <span class="sr-only"> page 2</a></li>
+			  </ul>
+			</nav>
+		</div>
 	</div>
+
+		</div>
 	<!-- Delete -->
 	<div class="modal fade" id="delete-modal-app" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
 	<div class="modal-dialog modal-dialog-centered" role="document">
@@ -168,12 +185,11 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
 
 <script>
-	$('.activity, #msg-repl, .in-progress,#link-deactive').hide();
+	$('.activity, #msg-repl, .in-progress').hide();
 	var type = window.location.hash.substr(1);
 	//alert (type);
 	if (type=='id-progress'){
-		$('.in-progress, #link-deactive').show();
-		$('#link-active').hide();
+		$('.in-progress').show();
 		//$('html').offset({top:0});
 	}
 	else if (type=='org-repl'){
