--- a/03-paymentsummary.html
+++ b/03-paymentsummary.html
@@ -73,7 +73,7 @@
 </section>-->
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-6 col-md-12"><br>
+			<div class="col-lg-8 col-md-12"><br>
 				<div role="alert" class="au-body au-page-alerts au-page-alerts--error" id="error">
 					<p>Declaration not completed</p>
 				</div>
@@ -143,7 +143,9 @@
 		<p class="au-callout" aria-label="Callout description1">
 			<label class="au-control-input">
 				<input class="au-control-input__input" type="checkbox" name="checkbox-ex" id="declaration">
-				<span class="au-control-input__text form-text p-t-0">I hereby declare that the particulars set out in this application are true in every respect and I understand there are penalties for providing false and misleading information and may result in prosecution, fines and cancellation of civil aviation authorisations.</span>
+				<span class="au-control-input__text form-text p-t-0">
+					I declare the students on this application can be certified in accordance with the Civil Aviation Safety Regulations as they have been assessed as completing the Remote Pilot Licence (RePL) Training [theory and operation/operation only], therefore qualifying for the [issue/variation] of a RePL.
+				</span>
 			</label>
 		</p>
 	</div>
@@ -151,8 +153,8 @@
 </div>
 <div class="container">
 	<div class="row">
-		<div class="col-md-6"><br>
-			<a href="04-payment.html" class="au-btn" id="summary">Proceed to Payment</a>
+		<div class="col-md-8"><br>
+			<a href="04-payment.html" class="au-btn" id="summary">Proceed to Westpac Payment</a>
 			<div class="save-exit">
 			<a href="01-organisation.html#id-progress" class="au-btn au-btn--secondary">
 			Save and exit
