--- a/04-payment.html
+++ b/04-payment.html
@@ -4,51 +4,30 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>Bob's Flying school | My CASA</title>
+<title>Westpac Credit card payment</title>
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
 
 	<link rel="stylesheet" href="css/furnace.min.css">
 	<!--<link rel="stylesheet" href="css/lead.css">-->
 	<link rel="stylesheet" href="css/main.css">
 </head>
 
-<body class="live-demo au-body au-grid js">
-	<header class="au-header logo au-body au-body--dark" role="banner">
+<body class="live-demo au-body au-grid js westpac">
+	<header class="au-header logo" role="banner">
 	  <div class="container">
 	    <div class="row">
 	      <div class="col-md-9 col-xs-7">
-	        <a class="au-header__brand" href="00-user-homepage.html">
-	          <img class="au-header__brand-image" alt="my CASA" src="img/CASALOGO-white-i.svg">
+	        <a class="au-header__brand" href="">
+	          <img class="au-header__brand-image" alt="westpac" src="img/westpac-logo.png">
 	        </a>
 	      </div>
-	      <div class="col-md-3 col-xs-5"><a class="au-btn au-btn--dark" href="signed-out.html">Sign out</a></div>
+
 	    </div>
 	  </div>
 
 	</header>
 
-			<div class="banner">
-				<div class=container>
-					<div class="row">
-					 <div class="col-md-12">
-				This service is currently in beta, we encourage you to <a href="feedback.html">provide feedback</a>
-				</div>
-				</div>
-			</div>
-		</div>
-		<div class=container>
-			<div class="row">
-			 <div class="col-md-12">
-				<nav class="au-breadcrumbs" aria-label="breadcrumb">
-			  <ul class="au-link-list au-link-list--inline">
-			    <li><a href="00-user-homepage.html">Home</a></li>
-
-			    <li><a href="01-organisation.html#repl">Bob's Flying School</a></li>
-					<li>Remote Pilot Licence (RePL)</li>
-			  </ul>
-			</nav>
-		</div>
-	</div>
-		</div>
 <main id="main-content">
 	<!--<section class="organisation">
 	<div class="container">
@@ -67,34 +46,16 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6"><br>
-					<h2 class="au-display-xl">Remote Pilot Licence (RePL)</h2>
-					<h3>Payment Details</h3>
-					<a class="au-direction-link au-direction-link--left" href="javascript:history.back()">Back</a>
-					<p class="au-callout" aria-label="Callout description1">
-					  <strong> Summary </strong>
-						<br>
-						<span>Remote Pilot Licence x2</span><br>
-						<span>Payment total $80</span>
-					</p><br>
-					<div class="form-section">
-					<p class="label">Card Type</p>
-					<label class="au-control-input">
-					  <input class="au-control-input__input" type="radio" name="radio-ex">
-					  <span class="au-control-input__text">Visa</span>
-					</label>
-					<br>
-					<label class="au-control-input">
-					  <input class="au-control-input__input" type="radio" name="radio-ex">
-					  <span class="au-control-input__text">Mastercard</span>
-					</label>
-					</div>
+					<h2 class="au-display-lg">Payment Details</h2>
+					<p>
 
+					</p>
 					<div class="form-section">
-					<label for="text-input-block">Card number</label>
+					<label for="text-input-block">Cardholder name</label>
 					<input class="au-text-input au-text-input--block" name="text-input-block" id="text-input-block" type="text" value="">
 					</div>
 					<div class="form-section">
-					<label for="text-input-block">Cardholder name</label>
+					<label for="text-input-block">Creditcard number</label>
 					<input class="au-text-input au-text-input--block" name="text-input-block" id="text-input-block" type="text" value="">
 					</div>
 
@@ -109,7 +70,7 @@
 					<div class="date date-month">
 						<label for="text-input-block2" class="form-text">Year</label>
 						<input class="au-text-input au-text-input--block" name="text-input-block" id="text-input-block2" type="text" value="">
-						</div>
+					</div>
 					</div>
 					</div>
 					<div class="form-section">
@@ -123,22 +84,27 @@
 	</div>
 	<div class="container">
 		<div class="row">
-			<div class="col-md-6"><br>
-				<a class="au-btn" href="05-receipt.html">Submit Payment</a>&nbsp;&nbsp;
-				<a class="" href="01-organisation.html#id-progress">Cancel Payment</a>
-				<div class="save-exit">
-				<a href="01-organisation.html#id-progress" class="au-btn au-btn--secondary">
-				Save and exit
-				</a>&nbsp; to continue this application later
-			 </div>
-			</div>
+			<div class="col-md-8">
+				<a class="au-btn au-btn--secondary" href="01-organisation.html#id-progress">Cancel</a>
+				<a class="au-btn float-right" href="05-receipt.html">Next</a>
+    	</div>
 		</div>
 	</div>
 </main>
 <footer class="footer">
-		<div class="footer-wrapper">
-			<iframe src="footer.html" frameborder="0" border="0" scrolling="no"></iframe>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-8"><br>
+				<p>Civil Aviation Safety Authority Copyright 2018, All rights Reserved
+					<span class="float-right"><img src="img/westpac-logo.png" width="80px" alt="">
+					<p>
+
+			</div>
+			<div class="col-md-4">
+
+			</div>
 		</div>
+	</div>
 </footer>
 <script type="text/javascript" src="js/furnace.min.js"></script>
 <script type="text/javascript" src="js/jquery.min.js"></script>
