--- a/05-receipt.html
+++ b/05-receipt.html
@@ -72,7 +72,7 @@
 </section>-->
 	<div class="container">
 		<div class="row">
-			<div class="col-md-6"><br>
+			<div class="col-md-8"><br>
 
 					<div role="alert" class="au-body au-page-alerts au-page-alerts--success">
   				<h3>Successful</h3>
@@ -85,7 +85,9 @@
 					<h2 class="au-display-xl">Remote Pilot Licence (RePL)</h2>
 					<p>A copy of your invoice and RePL application details has been sent to your email address bob@bobsflyingschool.com.au</p>
 					<p>Students on the RePL application have been notified by email. They will receive their licence in the mail within 5 business days. </p>
-					<p>
+					<p><strong>Would you like to submit any other application on behalf of the students?</strong></p>
+						<a href="#" class="au-direction-link">Aeronautical Radio Operator Certificate (AROC)</a><br>
+						<a href="#" class="au-direction-link">General English Language Notification (GELP)</a>
 					<!--<strong>Invoice</strong><br>
 						Remote Pilot Licence x 2<br>
 						Bob Furzer<br>
