--- a/submitted-applications.html
+++ b/submitted-applications.html
@@ -64,7 +64,7 @@
 					<h2>Submitted applications</h2>
 					<a class="au-direction-link au-direction-link--left" href="javascript:history.back()">Back</a>
 
-					<h3 class="au-display-md">Showing 50 of 100 applications</h3><br>
+					<h3 class="au-display-md">Showing 10 of 50 applications</h3><br>
 					<form role="search" class="au-search row" method="get" action="">
 						<label class="sr-only" for="s1">Search</label>
 						<div class="col-lg-8 col-xs-8">
@@ -146,6 +146,9 @@
 			    <!--<li class="page-item"><a class="page-link" href="#">Previous <span class="sr-only"> page 1</span></a></li>-->
 			    <li class="page-item active"><a class="page-link" href="#"><span class="sr-only">Current page </span>1</a></li>
 			    <li class="page-item"><a class="page-link" href="#"><span class="sr-only">Next page </span> 2</a></li>
+					<li class="page-item"><a class="page-link" href="#"><span class="sr-only">Next page </span> 3</a></li>
+					<li class="page-item"><a class="page-link" href="#"><span class="sr-only">Next page </span> 4</a></li>
+					<li class="page-item"><a class="page-link" href="#"><span class="sr-only">Next page </span> 5</a></li>
 			    <li class="page-item"><a class="page-link" href="#">Next <span class="sr-only"> page 2</a></li>
 			  </ul>
 			</nav>
