--- a/04-payment-confirmation.html
+++ b/04-payment-confirmation.html
@@ -46,7 +46,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6"><br>
-					<h2 class="au-display-lg">Payment Details</h2>
+					<h2 class="au-display-lg">Confirmation</h2>
 					<p>
 						<strong>Reference Number</strong><br>
 						123
@@ -60,45 +60,26 @@
 						<strong>Amount</strong><br>
 						$80
 						<br><br>
+						<strong>Cardholder</strong><br>
+						Bob Smith
+						<br><br>
+						<strong>Credit Card number</strong><br>
+						1234 4569 7896
+						<br><br>
+						<strong>Expiry Date</strong><br>
+						01/20
+						<br><br>
 					</p>
-					<div class="form-section">
-					<label for="text-input-block">Cardholder name</label>
-					<input class="au-text-input au-text-input--block" name="text-input-block" id="text-input-block" type="text" value="">
-					</div>
-					<div class="form-section">
-					<label for="text-input-block">Creditcard number</label>
-					<input class="au-text-input au-text-input--block" name="text-input-block" id="text-input-block" type="text" value="" style="width:70%!important;float:left;">
-					<img src="img/cardType.jpg" alt="" width="120px" style="float:left; margin-top:-.3rem;padding-left:1rem;"/>
-					</div>
 
-					<div class="form-section">
-					<div class="date-entry">
-					<p class="label">Expiry date</p>
-
-					<div class="date date-day">
-						<label for="text-input-block1" class="form-text">Month</label>
-						<input class="au-text-input au-text-input--block" name="text-input-block" id="text-input-block1" type="text" value="">
-					</div>
-					<div class="date date-month">
-						<label for="text-input-block2" class="form-text">Year</label>
-						<input class="au-text-input au-text-input--block" name="text-input-block" id="text-input-block2" type="text" value="">
-					</div>
-					</div>
-					</div>
-					<div class="form-section">
-					<div class="date date-year">
-						<label for="text-input-block3">CVV</label>
-						<input class="au-text-input au-text-input--block" name="text-input-block" id="text-input-block3" type="text" value="" style="width:25%!important;">
-					</div>
-				 </div>
 			 </div>
 		</div>
 	</div>
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8">
+				<a class="au-btn au-btn--secondary" href="04-payment.html">Back</a>&nbsp;&nbsp;
 				<a class="au-btn au-btn--secondary" href="01-organisation.html#id-progress">Cancel</a>
-				<a class="au-btn float-right" href="04-payment-confirmation.html">Next</a>
+				<a class="au-btn float-right" href="05-receipt.html">Next</a>
     	</div>
 		</div>
 	</div>
