--- a/submitted-applications.html
+++ b/submitted-applications.html
@@ -71,7 +71,7 @@
 						<input type="search" class="au-text-input " name="s" id="s1">
 					</div>
 						<div class="col-lg-4 col-xs-4">
-							<button class="au-btn au-stretch_row">Search</button>
+							<button class="au-btn au-stretch_row">Search Application</button>
 						</div>
 					</form><p>&nbsp;</p>
 					<ul class="list-unstyled">
