--- a/02-student.html
+++ b/02-student.html
@@ -66,6 +66,9 @@
 					<h3>100 points of identification required</h3>
 					<p>This student has not completed 100 points of identification for their ARN and cannot be issued a RePL.</p>
 				</div>
+				<div role="alert" class="au-body au-page-alerts au-page-alerts--error" id="existing-arn">
+					<h3>This student already has an existing RePL</h3>
+				</div>
 				<div role="alert" class="au-body au-page-alerts au-page-alerts--error" id="suspension">
 					<h3>Suspension</h3>
 					<p>This student has a suspension on their ARN. They will not be able to receive a RePL, please inform the student. An email has also been sent to the student about their suspension and RePL.</p>
@@ -202,7 +205,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
 
 <script>
-	$('#arn-check, #save, #warning, #error, .edit-student, .student-details, #finalise-error, #no-arn, #suspension').hide();
+	$('#arn-check, #save, #warning, #error, .edit-student, .student-details, #finalise-error, #no-arn, #suspension, #existing-arn').hide();
 	//var arn = document.getElementById("arn-input").value;
 	//var surname = document.getElementById("surname-input").value;
 
@@ -231,7 +234,7 @@
 		if(val1 == "" || val2 == ""){
 		//alert (timesClicked);
 			$('#error').show();
-			$('#save, #finalise-error, .test, #no-arn, #suspension').hide();
+			$('#save, #finalise-error, .test, #no-arn, #suspension, #existing-arn').hide();
 			document.getElementById("arn-error").textContent="The ARN does not match the Student's detail";
 			document.getElementById("surname-error").textContent="Please check the surname and try again";
 			$("#arn-input, #surname-input").addClass('form-error');
@@ -251,7 +254,7 @@
 				$("#arn-input").val("");
 				$("#surname-input").val("");
 				//alert(surname);
-				$('#error, #arn-error,#surname-error, #finalise-error, .test, #no-arn, #suspension').hide();
+				$('#error, #arn-error,#surname-error, #finalise-error, .test, #no-arn, #suspension, #existing-arn').hide();
 				$('#save, .student-details').show();
 				$('.grid, #peter').removeClass('hidden');
 				//timesClicked++;
@@ -260,7 +263,7 @@
 				//alert(surname);
 				$("#arn-input").val("");
 				$("#surname-input").val("");
-				$('#error, #arn-error, #surname-error, #finalise-error, .test, #no-arn, #suspension').hide();
+				$('#error, #arn-error, #surname-error, #finalise-error, .test, #no-arn, #suspension, #existing-arn').hide();
 				$( "#arn-input" ).removeClass('form-error');
 				$( "#surname-input" ).removeClass('form-error');
 				$('#save').show();
@@ -269,16 +272,22 @@
 			}
 	}
 			if(val1 == "Wilson"){
-				$('#error').hide();
+				$('#error, #finalise-error').hide();
 				$('#save').hide();
 				$("#arn-input, #surname-input").removeClass('form-error');
 				$('#no-arn').show();
 			}
 			if(val1 == "Brown"){
-				$('#error, #no-arn').hide();
+				$('#error, #no-arn, #finalise-error, #existing-arn').hide();
 				$('#save').hide();
 				$("#arn-input, #surname-input").removeClass('form-error');
 				$('#suspension').show();
+			}
+			if(val1 == "Johnson"){
+				$('#error, #no-arn, #finalise-error').hide();
+				$('#save').hide();
+				$("#arn-input, #surname-input").removeClass('form-error');
+				$('#existing-arn').show();
 			}
 	});
 	$('#finalise').click(function(){
@@ -287,7 +296,7 @@
 
 		if (classPeter && classAva){
 				$('#finalise-error').show();
-				$('#error, #arn-error, #surname-error, #save, .test, #no-arn, #suspension').hide();
+				$('#error, #arn-error, #surname-error, #save, .test, #no-arn, #suspension, #existing-arn').hide();
 				document.getElementById("arn-error").textContent="Please enter a ARN";
 				document.getElementById("surname-error").textContent="Please enter a Family name";
 				$("#arn-input, #surname-input").addClass('form-error');
